Fix glitchy `overflow-y` scroll issue.

--- a/src/app/components/todo-list/todo-list.component.scss
+++ b/src/app/components/todo-list/todo-list.component.scss
@@ -2,4 +2,5 @@
   padding-bottom: 1.5rem;
   padding-top: 6rem;
   height: calc(100vh - 4rem);
+  overflow-y: scroll;
 }
