--- a/src/app/components/todo/todo.component.scss
+++ b/src/app/components/todo/todo.component.scss
@@ -54,7 +54,7 @@
 }
 
 .added__transition-up__start {
-  margin: 33% 50% 0 50%;
+  margin: 50% 50% 0 50%;
   height: 0;
   opacity: 0;
 }
